--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,10 @@
 #title {
     text-align: center;
     font-weight: 600;
-    font-family:  sans-serif;
+    margin-top: auto;
     margin-bottom: 0;
+    color: #333;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #state {
@@ -24,7 +26,12 @@
 }
 
 #total-deaths-title, #total-cases-title {
-    margin-left: 50px;
+    margin-top: 30px;
+    margin-left: 30px;
+    color: #333;
+    text-align: left;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #toggleButtonCases, #toggleButtonDeaths {
